<resources>
    <string name="app_name">RecruitmentApp</string>

    <string name="account">用户名：</string>
    <string name="phone">手机号：</string>
    <string name="password">密码：</string>
    <string name="company">公司：</string>
    <string name="school">学校：</string>
    <string name="major">专业：</string>

    <string name="choose">请选择身份：</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget">忘记密码</string>
    <string name="new_register">新用户注册</string>
    <string name="query">查询</string>


</resources>