<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="用户登录"
        android:textSize="40sp"
        android:textColor="#000000"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/editText_phone"
            android:layout_marginRight="60dp"
            style="@style/editText_Style_phone"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_marginLeft="15dp"
            style="@style/editText_Style_password"/>

        <CheckBox
            android:id="@+id/checkbox__login_displaypw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="显示"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="180dp"
            android:gravity="end"
            android:text="@string/choose"
            android:textSize="17sp"/>

        <Spinner
            android:id="@+id/spinner_identity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="14sp"
            android:entries="@array/identity" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">


        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />


        <Button
            android:id="@+id/button_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_login"
            android:textColor="@color/design_default_color_primary"
            android:background="@android:color/transparent"
            android:text="@string/forget"/>


        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_login"
            android:textColor="@color/design_default_color_primary"
            android:background="@android:color/transparent"
            android:text="@string/new_register"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>



</LinearLayout>